feat: implement Redux store for authentication and add admin endpoints for bookings and payments