@@ -4,16 +4,19 @@ import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 @Component
+@Slf4j
 public class GatewayAuthenticationFilter extends OncePerRequestFilter {
 
     @Override
@@ -22,6 +25,7 @@ public class GatewayAuthenticationFilter extends OncePerRequestFilter {
 
         String userId = request.getHeader("X-User-Id");
         String role = request.getHeader("X-User-Role");
+        String phoneNumber = request.getHeader("X-User-Phone");
 
         if (request.getRequestURI().contains("/api/v1/payments/momo/ipn")
                 || request.getRequestURI().contains("/api/v1/payments/momo/return")
@@ -31,11 +35,23 @@ public class GatewayAuthenticationFilter extends OncePerRequestFilter {
             return;
         }
 
-        if (userId != null && role != null) {
-            SimpleGrantedAuthority authority = new SimpleGrantedAuthority("ROLE_" + role);
-            UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(
-                    userId, null, Collections.singletonList(authority));
-            SecurityContextHolder.getContext().setAuthentication(auth);
+        if (role != null && (userId != null || phoneNumber != null)) {
+            try {
+                String cleanRole = role.toUpperCase().replace("ROLE_", "");
+                List<SimpleGrantedAuthority> authorities = List.of(
+                        new SimpleGrantedAuthority("ROLE_" + cleanRole),
+                        new SimpleGrantedAuthority(cleanRole)
+                );
+
+                String principal = (userId != null && !userId.isBlank()) ? userId : phoneNumber;
+
+                UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(
+                        principal, null, authorities);
+                auth.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
+                SecurityContextHolder.getContext().setAuthentication(auth);
+            } catch (Exception e) {
+                log.error("Lỗi khi thiết lập Header Authentication trong payment-service", e);
+            }
         }
 
         filterChain.doFilter(request, response);
